# mmap_inject

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
examples/: test_dll.rs  test_injector.rs
mmap_inject/: Cargo.toml
mmap_inject/src/: injector.rs  lib.rs  pe.rs  shellcode.rs
src/: injector.rs  pe.rs
test_dll/: Cargo.toml
test_dll/src/: lib.rs
test_exe/: Cargo.toml
test_exe/src/: main.rs
test_injector/: Cargo.toml
test_injector/src/: main.rs
