[package]
name = "mmap_inject"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
] }
