[package]
name = "test_injector"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "test_injector"
path = "src/main.rs"

[dependencies]
mmap_inject = { path = "../mmap_inject" }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
] }
